--- a/my-project/styles/globals.css
+++ b/my-project/styles/globals.css
@@ -2,10 +2,53 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+  --bgLinearBlue: linear-gradient(298.14deg, #2B78E0 18.09%, rgba(43, 120, 224, 0.79) 81.24%);
+  --colorPrimary: #5D6E81;
+  --colorBgPrimary: #F5F7F8;
+  --colorBgLogin: #EDF2F8;
+  --colorBlue: #2C79E0;
+  --navigationWidth: 240px;
+  --navigationWidthCollapsed: 80px;
+}
+
 html,
 body {
   margin: 0;
   padding: 0;
   scroll-behavior: smooth;
   scroll-behavior: smooth;
+}
+
+.bgLinearBlue {
+  background: var(--bgLinearBlue);
+}
+
+.bgLogin {
+  background-color: var(--colorBgLogin);
+  box-shadow: 0px 4px 100px rgba(0, 0, 0, 0.25);
+  border-radius: 40px 40px 0px 0px;
+}
+
+@media (min-width: 768px) {
+  .bgLogin {
+    background-color: var(--colorBgLogin);
+    box-shadow: 0px 4px 100px rgba(0, 0, 0, 0.25);
+    border-radius: 0px 0px 100px 0px;
+  }
+}
+
+
+.outlin input:focus-within~label,
+.outlin input:not(:placeholder-shown)~label {
+  @apply transform scale-75 -translate-y-4 z-0 mb-3 mt-3 px-1 py-0;
+}
+
+.inputLogin {
+  font-size: .9rem;
+  font-weight: normal;
+  color: rgb(0 0 0 / .4);
+  background: #fff;
+  border: 1px solid #D9E2EE;
+  border-radius: 5px;
 }
