--- a/my-project/styles/globals.css
+++ b/my-project/styles/globals.css
@@ -45,6 +45,10 @@ body {
   border-radius: 0px 70px 0px 0px;
 }
 
+.rounded-tl-4xl{
+  border-radius: 30px 0px 0px 0px;
+}
+
 @media screen and (min-width: 1280px) {
   .rounded-br-4xl{
     border-radius: 0px 0px 120px 0px;
